<resources>
    <string name="app_name" translatable="false">Gdzie się dzieje?</string>
    <string name="google_place_key" translatable="false">AIzaSyCJzQlROvatusmmEm2U35f5wUDb6mLoPAM</string>

    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="reg_or_fb">or:</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="appName" translatable="false">Gdzie się dzieje?</string>
    <string name="resetPassword">Reset Password</string>

    <string name="facebook_app_id" translatable="false">422088551467608</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb422088551467608</string>
    <string name="sign_up_fb">Sign Up with Facebook</string>
    <string name="sign_in_fb" translatable="false">Sign In with Facebook</string>
    <string name="sign_in_code">Sign In Using Code</string>
    <string name="code">Code</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="events">Events</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="title_activity_maps">Map</string>
    <string name="eventName">Name</string>
    <string name="eventDescription">Description</string>
    <string name="eventsInLocation">events in this location</string>
    <string name="addNewEvent">Add new event</string>
    <string name="eventType">Typ eventu</string>

    <string-array name="sport_list">
        <item>Piłka nożna</item>
        <item>Koszykówka</item>
        <item>Siatkówka</item>
        <item>Siłownia</item>
        <item>Polowanie na pokemony</item>
        <item>Badminton</item>
        <item>Squash</item>
        <item>Golf</item>
        <item>Bieganie</item>
        <item>Pływanie</item>
        <item>Piłka ręczna</item>
        <item>Tenis</item>
    </string-array>

    <string-array name="sport_list2">
        <item>Wszystkie</item>
        <item>Piłka nożna</item>
        <item>Koszykówka</item>
        <item>Siatkówka</item>
        <item>Siłownia</item>
        <item>Polowanie na pokemony</item>
        <item>Badminton</item>
        <item>Squash</item>
        <item>Golf</item>
        <item>Bieganie</item>
        <item>Pływanie</item>
        <item>Piłka ręczna</item>
        <item>Tenis</item>
    </string-array>

    <string-array name="cities_list">
        <item>Wrocław</item>
        <item>Białcz</item>
        <item>Warszawa</item>
        <item>Racibórz</item>
        <item>Kraków</item>
        <item>Gdańsk</item>
        <item>Wszystkie miasta</item>
    </string-array>

    <string-array name="sex_list">
        <item>Nie sprecyzowano</item>
        <item>Mężczyzna</item>
        <item>Kobieta</item>
    </string-array>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="cancel">cancel</string>
    <string name="EVENTS">EVENTS</string>
    <string name="refresh">Refresh</string>
    <string name="noInternet">No Internet connection</string>
    <string name="downloading">Downloading...</string>
    <string name="loading">Loading...</string>
    <string name="remove_filter">Remove filter</string>
    <string name="members">MEMBERS</string>
    <string name="join">JOIN</string>
    <string name="my_events">My Events</string>
    <string name="send" translatable="false">SEND</string>
    <string name="update">UPDATE EVENT</string>
    <string name="updateLabel">UPDATE EVENT</string>
    <string name="updateBtn">UPDATE</string>
    <string name="delete_event">DELETE EVENT</string>
    <string name="add_event">ADD EVENT</string>
    <string name="required_fields">Fill out all required fields!</string>
    <string name="my_profile">My Profile</string>
    <string name="my_profile_label">MY PROFILE</string>
    <string name="birthday">Birthday</string>
    <string name="save_profile">SAVE PROFILE</string>
    <string name="description">Description</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="password_changed">Password has been changed!</string>
    <string name="connection_problem">Problem with connection</string>
    <string name="identical_passwords">The password must be identical in both fields!</string>
    <string name="password_required">Password is required</string>
    <string name="profile">PROFILE</string>
    <string name="report">Report profile</string>
    <string name="sex">Sex</string>
    <string name="max_members">Max members</string>
    <string name="date">Date</string>
    <string name="sport">Sport</string>
    <string name="data">Data</string>
    <string name="city">City</string>
    <string name="error">Error</string>
    <string name="error_message">An error occurred while processing your request</string>
    <string name="error_wrong_email">Invalid email address</string>
    <string name="error_no_internet">No Internet connection</string>
    <string name="info">Info</string>
    <string name="info_password_reset">Your password has been reset successfully!</string>
    <string name="info_profile_updated">Profile has been updated successfully!</string>
    <string name="place">place</string>
    <string name="blocked">Blocked events</string>
    <string name="blocked_events_title">Blocked</string>
    <string name="interested">INTERESTED</string>
    <string name="not_interested">Not interested</string>
    <string name="people_interested">Interested people:</string>
    <string name="wrongLoginPass">Incorrect login or password</string>


</resources>
