<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/events_list"
            android:icon="@drawable/event"
            android:title="@string/events" />
        <item
            android:id="@+id/events_map"
            android:icon="@drawable/map_events"
            android:title="@string/map" />
        <item
            android:id="@+id/my_events"
            android:icon="@drawable/my_events"
            android:title="@string/my_events" />
        <item
            android:id="@+id/blocked_events"
            android:icon="@drawable/my_events"
            android:title="@string/blocked" />
        <item
            android:id="@+id/my_profile"
            android:icon="@drawable/user"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>
