<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activityPadding"
    android:gravity="center"
    tools:context="matwes.zpi.Login.SignInActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etEmailIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPasswordIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/textColor" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSignIn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btnMargin"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassword"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="14sp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btnSignInFb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btnMargin"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textAllCaps="true"
        android:textSize="14sp"
        app:com_facebook_login_text="@string/sign_in_fb" />

    <Button
        android:id="@+id/btnSignInByCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/btnMargin"
        android:layout_marginRight="@dimen/btnMargin"
        android:layout_marginTop="-15dp"
        android:text="@string/sign_in_code" />
</LinearLayout>
