<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activityPadding"
    android:gravity="center"
    tools:context="matwes.zpi.Login.ResetPassActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:id="@+id/etNewPassword"
            android:inputType="textPassword"
            android:textColor="@color/textColor"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_new_password"
            android:id="@+id/etRepeatPassword"
            android:inputType="textPassword"
            android:textColor="@color/textColor"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btnMargin"
        android:text="@string/change_password" />
</LinearLayout>
