<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activityPadding"
    tools:context="matwes.zpi.login.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textColor="@color/blackColor" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textColor="@color/blackColor" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/blackColor" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/blackColor" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="Data urodzenia"
                android:textColor="@color/blackColor" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Płeć:"
            android:textColor="@color/blackColor"
            android:textSize="20dp"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/plec_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kobieta"
                android:textSize="17dp"/>
            <RadioButton android:id="@+id/plec_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mężczyzna"
                android:textSize="17dp" />
        </RadioGroup>
        <Button
            android:id="@+id/btnSignUp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:text="Zarejestruj się" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/reg_or_fb"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/blackColor" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btnSignUpFb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAllCaps="true"
            android:textSize="14sp"
            app:com_facebook_login_text="@string/sign_up_fb" />
    </LinearLayout>
</ScrollView>
